--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -17,10 +17,11 @@
         <TextView
             android:id="@+id/vedi"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="90dp"
             android:layout_gravity="center"
+            android:gravity="center_horizontal"
             android:textColor="#FFF"
-            android:textSize="15dp" />
+            android:textSize="30dp" />
 
 
         <Button
