--- a/app/src/main/res/layout/activity_conferma_ordine.xml
+++ b/app/src/main/res/layout/activity_conferma_ordine.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -15,7 +15,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="0dp"
         android:text="@string/conferma_ordine"
-        android:typeface="serif"/>
+        android:typeface="serif"
+        android:layout_alignBottom="@+id/ordine_completo"/>
 
 
-</LinearLayout>
+</RelativeLayout>
